<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolicitacaoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:background="@color/azul"
                    android:orientation="vertical">

                    <TextView
                        style="@style/titulo"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/solicitacao" />
                </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/abonoPecuniario"/>

                    <RadioGroup
                        android:id="@+id/groupOpcao"
                        android:orientation="horizontal"
                        android:onClick="OnRadioClick">

                        <RadioButton
                            android:id="@+id/radiosim"
                            android:layout_width="115dp"
                            android:layout_height="wrap_content"
                            android:onClick="OnRadioClick"
                            android:text="@string/sim" />

                        <RadioButton
                            android:id="@+id/radionao"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="OnRadioClick"
                            android:text="@string/nao" />
                    </RadioGroup>
                </TableRow>
                <TableRow
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/viewDataInicio"
                        android:text="@string/dataInicio" />

                    <Button
                        android:id="@+id/btnSelecione"
                        android:onClick="onSelecionarData"
                        android:text="@string/selecione" />
                </TableRow>
                <TableRow
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/quantidadeDias"/>

                    <Spinner
                        android:id="@+id/spnComboBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/comboBox"></Spinner>
                </TableRow>
                <TableRow
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/dataFim"/>

                    <Button
                        android:id="@+id/btnDataFim"
                        android:text="@string/data" />
                </TableRow>

                <Button
                    android:id="@+id/btnRegistrar"
                    android:onClick="calcularDataFinal"
                    android:text="@string/registrar" />



            </TableLayout>

        </LinearLayout>

</ScrollView>